--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -2,8 +2,10 @@ header
 	#logo
 		//- img(src="images/logo.png" alt="veracity magazine")
 	#nav
-		ul
-			li: a Home
-			li: a Journey
-			li: a Life &amp; Culture
-			li: a Campus Life
+		.navbar-wrapper
+			.container
+				ul		
+					li: a Home
+					li: a Journey 
+					li: a Life &amp; Culture 
+					li: a Campus Life 
