--- a/veracity/views/partials/page/footer.jade
+++ b/veracity/views/partials/page/footer.jade
@@ -1,7 +1,9 @@
 footer
-	ul
-		li: a About Us
-		li: a Contact Us
+	.menu
+		.bottom
+			ul
+				li: a About Us
+				li: a Contact Us
 	#social
 		#facebook
 		#twitter
