--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -1,11 +1,18 @@
 header
+	#social
+		.menu
+			.top
+				ul
+					li: a facebook
+					li: a twitter
+					li: a instagram
 	#logo
+		p Veracity 
 		//- img(src="images/logo.png" alt="veracity magazine")
-	#nav
-		.navbar-wrapper
-			.container
-				ul		
-					li: a Home
-					li: a Journey 
-					li: a Life &amp; Culture 
-					li: a Campus Life 
+	#navbar
+		.mainNav
+			ul
+				li: a Journey 
+				li: a Life &amp; Culture 
+				li: a Campus Life  
+	
