--- a/veracity/views/layout.jade
+++ b/veracity/views/layout.jade
@@ -5,13 +5,13 @@ html(lang="en")
 		include partials/page/head
 	body
 		//header.jade is logo, nav bar
-		include ./partials/page/header
+		include partials/page/header
 		//every page starts with .container,
 		//no need to put on any other page
 		.container
 			block content
 		//footer.jade is copyright info, more links
-		include ./partials/page/footer
+		include partials/page/footer
 		//bootstrap/jquery already in jsdefaults.jade
 		//add any other packages we need
-		include ./partials/page/jsdefaults
+		include partials/page/jsdefaults
