--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -1,18 +1,64 @@
 header
-	#social
-		.menu
-			.top
-				ul
-					li: a facebook
-					li: a twitter
-					li: a instagram
+	nav.navbar.navbar-defualt(role="navigation")
+		.container-fluid
+			.navbar-header
+				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+					span.sr-only Toggle navigation
+					span.icon-bar
+					span.icon-bar
+					span.icon-bar
+				a.navbar-brand(href="#") Brand
+			.collapse.navbar-collapse#bs-example-navbar-collapse-1
+				ul.nav.navbar-nav
+					li.active
+						a(href="#") Link
+					li
+						a(href="#") Link
+					li.dropdown
+						a.dropdown-toggle(href="#", data-toggle="dropdown") Dropdown
+							span.caret
+						ul.dropdown-menu(role="menu")
+							li
+								a(href="#") Action
+							li
+								a(href="#") Another action
+							li
+								a(href="#") Something else here
+							li.divider
+							li
+								a(href="#") Separated link
+							li.divider
+							li
+								a(href="#") One more separated link
+				form.navbar-form.navbar-left(role="search")
+					.form-group
+						input.form-control(type="text", placeholder="Search")
+						button.btn.btn-default(type="submit") Submit
+				ul.nav.navbar-nav.navbar-right
+					li
+						a(href="#") Link
+					li.dropdown
+						a.dropdown-toggle(href="#", data-toggle="dropdown") Dropdown
+							span.caret
+						ul.dropdown-menu(role="menu")
+							li
+								a(href="#") Action
+							li
+								a(href="#") Another action
+							li
+								a(href="#") Something else here
+							li.divider
+							li
+								a(href="#") Separated link
 	#logo
-		p Veracity 
+		p Veracity
 		//- img(src="images/logo.png" alt="veracity magazine")
 	#navbar
 		.mainNav
 			ul
-				li: a Journey 
-				li: a Life &amp; Culture 
-				li: a Campus Life  
-	
+				li
+					a Journey
+				li
+					a Life &amp; Culture
+				li
+					a Campus Life
