--- a/veracity/views/partials/page/head.jade
+++ b/veracity/views/partials/page/head.jade
@@ -4,6 +4,7 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
 title= title
 link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css', rel='stylesheet')
 link(rel='stylesheet', href='/stylesheets/style.css')
+link(rel='stylesheet', href='/stylesheets/carousel.css')
 link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
 // if lt IE 9
 	script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
