--- a/veracity/public/stylesheets/carousel.css
+++ b/veracity/public/stylesheets/carousel.css
@@ -1,24 +1,45 @@
- #carousel body {
-     padding-top: 20px;
- }
- #carousel .nav a small {
-     display: block;
- }
- #carousel .nav {
-     background: #eee;
- }
- .nav-justified > li > a {
-     border-radius: 0px;
- }
- .nav-pills > li[data-slide-to="0"].active a {
-     background-color: #b4d9a7;
- }
- .nav-pills > li[data-slide-to="1"].active a {
-     background-color: #4f77cb;
- }
- .nav-pills > li[data-slide-to="2"].active a {
-     background-color: #d11e4f;
- }
- #logo h1 {
-		text-align: center; 
- }
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
