--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -1,3 +1,55 @@
 extends ../index.jade
 block content
 	h1 Journey
+	hr
+	#stories
+		.container
+			.row
+				.col-xs-6.col-md-4
+					.thumbnail
+						img(src="/images/300x200.jpg", alt="...")
+						.caption
+							h6 Issue One / Journey
+							h4 story number 1 title goes here
+							p blah blah blah 
+							p
+								a.btn.btn-default(href="#", role="button") read more
+				.col-xs-6.col-md-4
+					.thumbnail
+						img(src="/images/300x200.jpg", alt="...")
+						.caption
+							h6 Issue One / Journey
+							h4 story number 2 title goes here
+							p blah blah blah 
+							p
+								a(href="#") read more
+			.row
+				.col-xs-6.col-md-4
+					.thumbnail
+						img(src="/images/300x200.jpg", alt="...")
+						.caption
+							h6 Issue One / Journey
+							h4 story number 2 title goes here
+							p blah blah blah 
+							p
+							a(href="#") read more
+		.container
+			.row
+				.col-xs-6.col-md-4
+					h3 Bloom 
+					p blah blah blah 
+					p testimonies 
+						.thumbnail
+							img(src="/images/150x100.jpg", alt="...")
+							.caption
+								h4 Bloom Testimony 1
+								p blah blah blah 
+								p click image to read more
+					p blah blah blah 
+					p testimonies 
+						.thumbnail
+							img(src="/images/150x100.jpg", alt="...")
+							.caption
+								h4 Bloom Testimony 1
+								p blah blah blah 
+								p click image to read more
