--- a/veracity/views/partials/page/head.jade
+++ b/veracity/views/partials/page/head.jade
@@ -5,7 +5,7 @@ title= title
 link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css', rel='stylesheet')
 link(rel='stylesheet', href='/stylesheets/main.css')
 link(rel='stylesheet', href='/stylesheets/carousel.css')
-link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
+//link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
 // if lt IE 9
 	script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
 	script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
