--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -15,17 +15,17 @@ header
 						a(href="#") Instagram
 					li
 						a(href="#") Twitter
-				form.navbar-form.navbar-right(role="search")
-					.form-group
-						input.form-control(type="text", placeholder="Search")
-						button.btn.btn-default(type="submit") Submit
+				//form.navbar-form.navbar-right(role="search")
+					//.form-group
+						//input.form-control(type="text", placeholder="Search")
+						//button.btn.btn-default(type="submit") Submit
 #logo
 	.container-fluid
 		.row
 			h1 Veracity
 			//- img(src="images/logo.png" alt="veracity magazine")
 #mainNav
-	nav.navbar.navbar-static-top(role="navigation")
+	nav.navbar-default.navbar-static-top(role="navigation")
 		.container-fluid
 			.navbar-header
 				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
@@ -34,10 +34,11 @@ header
 					span.icon-bar
 					span.icon-bar
 			.collapse.navbar-collapse#bs-example-navbar-collapse-1
-				ul.nav.navbar-nav
+				ul.nav.nav-justified
 					li.active
 						a(href="#") Journey
 					li
 						a(href="#") Life &amp; Culture
 					li
 						a(href="#") Campus Life
+
