--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -37,21 +37,29 @@ block content
 						p blah blah blah 
 						p
 							a(href="#") read more
-			.col-xs-6.col-md-4
+			#bloom.col-xs-6.col-md-4
 				h3 Bloom 
-				p blah blah blah 
-				p testimonies 
-					.thumbnail
-						img(src="/images/150x100.jpg", alt="...")
-						.caption
-							h4 Bloom Testimony 1
-							p blah blah blah 
-							p click image to read more
-				p blah blah blah 
-				p testimonies 
-					.thumbnail
-						img(src="/images/150x100.jpg", alt="...")
-						.caption
-							h4 Bloom Testimony 1
-							p blah blah blah 
-							p click image to read more
+				.thumbnail
+					img(src="/images/150x100.jpg", alt="...")
+					.caption
+						h4 Bloom Testimony 1
+						p blah blah blah 
+						p click image to read more
+				.thumbnail
+					img(src="/images/150x100.jpg", alt="...")
+					.caption
+						h4 Bloom Testimony 2
+						p blah blah blah 
+						p click image to read more
+				.thumbnail
+					img(src="/images/150x100.jpg", alt="...")
+					.caption
+						h4 Bloom Testimony 3
+						p blah blah blah 
+						p click image to read more
+				.thumbnail
+					img(src="/images/150x100.jpg", alt="...")
+					.caption
+						h4 Bloom Testimony 4
+						p blah blah blah 
+						p click image to read more
