almost done! (not really)

--- a/veracity/public/stylesheets/main.css
+++ b/veracity/public/stylesheets/main.css
@@ -1,10 +1,19 @@
+@font-face {
+	font-family: 'Bebas Neue';
+	src: url('/fonts/bebas-neue/BebasNeue.otf');
+	font-family: 'Verlag Book';
+	src: url('/fonts/verlag/Verlag-Book.otf');
+	/*font-family: 'Minion Pro';
+	src: url('/fonts/minion-pro/MinionPro-Regular.otf');*/
+}
 body {
   padding-top: 50px;
-  padding-bottom: 70px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-family: 'Verlag Book';
 }
 a {
-  color: #00b7ff;
+  color: gray;
+  /*color: #00b7ff;*/
 }
 header {
 	position: absolute;
@@ -12,26 +21,46 @@ header {
 	left: 0;
 	width: 100%;
 }
-#logo h1 {
+.row h3 {
 	text-align: center;
 	padding-bottom: 20px;
+}
+#logo {
+	text-align: center;
+	padding-top: 20px;
 }
 #stories .thumbnail {
 	border: hidden;
 }
-.row h3 {
-	text-align: center;
-	padding-bottom: 20px; 
-}
-#myCarousel {
-	padding-top: 20px;
-}
-.navbar-nav > li > a {
-	padding-top: 5px !important; padding-bottom: 5px !important;
-}
-.navbar {
+/*.nav .navbar-nav {
 	min-height: 30px !important
+}*/
+#topNav ul li {
+	font-size: 16px;
+}
+#topNav li:last-child {
+	float: right;
 }
 #mainNav .navbar-default {
 	background-color: transparent !important;
+}
+#mainNav .navbar-default .navbar-nav {
+	display: inline-block;
+	float: none;
+	vertical-align: top; 
+}
+#mainNav .navbar-default .navbar-collapse {
+	text-align: center;
+}
+#mainNav .navbar-default li {
+	font-size: 20px;
+	padding-right: 30px;
+	padding-left: 30px;  
+}
+#footer ul {
+	text-align: center;
+}
+#footer ul li {
+	display: inline-block;
+	padding-right: 5px;
 }
