--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -1,66 +1,67 @@
 extends ../index.jade
 block content
 	h1 Journey
-	hr
 	#stories
 		.row
-			hr
-			.col-xs-6.col-md-8
-				.col-xs-6.col-md-6.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+			.col-xs-12.col-md-8
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
 						h4 story number 1 title goes here
 						p blah blah blah 
 						p
 							a(href="#") read more
-				.col-xs-6.col-md-6.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+			.col-xs-12.col-md-4
+				h3 Bloom
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
-						h6 Issue One / Journey
-						h4 story number 2 title goes here
+						h4 Bloom
 						p blah blah blah 
 						p
 							a(href="#") read more
-				.col-xs-6.col-md-6.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+		.row
+			.col-md-6.col-md-4
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 2 title goes here
+						h4 story number 1 title goes here
 						p blah blah blah 
 						p
 							a(href="#") read more
-				.col-xs-6.col-md-6.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+			.col-md-6.col-md-4
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 2 title goes here
+						h4 story number 1 title goes here
 						p blah blah blah 
 						p
 							a(href="#") read more
-			#bloom.col-xs-6.col-md-4
-				h3 Bloom 
+		.row
+			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/150x100.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
-						h4 Bloom Testimony 1
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
 						p blah blah blah 
-						p click image to read more
+						p
+							a(href="#") read more
+			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/150x100.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
-						h4 Bloom Testimony 2
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
 						p blah blah blah 
-						p click image to read more
-				.thumbnail
-					img(src="/images/150x100.jpg", alt="...")
-					.caption
-						h4 Bloom Testimony 3
-						p blah blah blah 
-						p click image to read more
-				.thumbnail
-					img(src="/images/150x100.jpg", alt="...")
-					.caption
-						h4 Bloom Testimony 4
-						p blah blah blah 
-						p click image to read more
+						p
+							a(href="#") read more
