--- a/veracity/views/partials/page/footer.jade
+++ b/veracity/views/partials/page/footer.jade
@@ -1,4 +1,4 @@
-#footer
+//#footer
 	nav.navbar.navbar-inverse.navbar-fixed-bottom(role="navigation")
 		.container-fluid
 			.navbar-header
@@ -13,3 +13,12 @@
 						a(href="#") About Us
 					li
 						a(href="#") Contact Us
+#footer 
+	hr
+	ul
+		li 
+			p COPYRIGHT 
+		li
+			span.glyphicon.glyphicon-copyright-mark(aria-hidden="true")
+		li
+			p VERACITY 2014
