--- a/veracity/views/index.jade
+++ b/veracity/views/index.jade
@@ -1,6 +1,5 @@
 extends layout
 block content
-
 	#myCarousel.carousel.slide(data-ride="carousel")
 		ol.carousel-indicators
 			li.active(data-target="#myCarousel", data-slide-to="0")
@@ -9,22 +8,19 @@ block content
 		.carousel-inner
 			.item.active
 				img(src="/images/1200x400.jpg", alt="First Slide")
-				.container
-					.carousel-caption
-						h1 Example headline #1
-						p First slide
+				.carousel-caption
+					h1 Example headline #1
+					p First slide
 			.item
 				img(src="/images/1200x400.jpg", alt="Second Slide")
-				.container
-					.carousel-caption
-						h1 Example headline #2
-						p Second slide
+				.carousel-caption
+					h1 Example headline #2
+					p Second slide
 			.item
 				img(src="/images/1200x400.jpg", alt="Third Slide")
-				.container
-					.carousel-caption
-						h1 Example headline #3
-						p Third slide
+				.carousel-caption
+					h1 Example headline #3
+					p Whatever you want
 		a.left.carousel-control(href="#myCarousel", role="button", data-slide="prev")
 			span.glyphicon.glyphicon-chevron-left
 		a.right.carousel-control(href="#myCarousel", role="button", data-slide="next")
@@ -36,55 +32,61 @@ block content
 		.row
 			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
 						h4 story number 1 title goes here
 						p blah blah blah 
 						p
-							a.btn.btn-default(href="#", role="button") read more
-			.col-md-6.col-md-4
-				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 2 title goes here
-						p blah blah blah 
-						p
 							a(href="#") read more
 			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Campus Life
-						h4 story number 3 title goes here
-						p blah blah blah 
-		.row
-			.col-md-6.col-md-4
-				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
 						h4 story number 1 title goes here
 						p blah blah blah 
 						p
-							a.btn.btn-default(href="#", role="button") read more
+							a(href="#") read more
 			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 2 title goes here
+						h4 story number 1 title goes here
 						p blah blah blah 
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
 				.thumbnail
-					img(src="/images/300x200.jpg", alt="...")
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
 					.caption
-						h6 Issue One / Campus Life
-						h4 story number 3 title goes here
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
 						p blah blah blah 
-	hr
-	.row
-		h3 something else here
+						p
+							a(href="#") read more
+			.col-md-6.col-md-4
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
+					.caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more
+			.col-md-6.col-md-4
+				.thumbnail
+					a(href="#") 
+						img(src="/images/300x200.jpg", alt="...")
+					.caption
+						h6 Issue One / Journey
+						h4 story number 1 title goes here
+						p blah blah blah 
+						p
+							a(href="#") read more
