--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -1,5 +1,32 @@
 header
-	nav.navbar.navbar-inverse.navbar-static-top(role="navigation")
+	#topNav
+		nav.navbar.navbar-inverse.navbar-static-top(role="navigation")
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+						span.sr-only Toggle navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+				.collapse.navbar-collapse#bs-example-navbar-collapse-1
+					ul.nav.navbar-nav
+						li 
+							a(href="#") About 
+						li 
+							a(href="#") Magazine
+						li
+							a(href="#") Contact 
+						li
+							a(href="#") 
+								img(src="/images/facebook.png", alt="facebook icon")
+					form.navbar-form.navbar-right(role="search")
+						.form-group
+							input.form-control(type="text", placeholder="Search")
+							button.btn.btn-default(type="submit") Submit
+#logo
+	img(src="images/logo.png" alt="veracity magazine")
+#mainNav
+	nav.navbar-default(role="navigation")
 		.container-fluid
 			.navbar-header
 				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
@@ -9,33 +36,7 @@ header
 					span.icon-bar
 			.collapse.navbar-collapse#bs-example-navbar-collapse-1
 				ul.nav.navbar-nav
-					li.active
-						a(href="#") Facebook
 					li
-						a(href="#") Instagram
-					li
-						a(href="#") Twitter
-				//form.navbar-form.navbar-right(role="search")
-					//.form-group
-						//input.form-control(type="text", placeholder="Search")
-						//button.btn.btn-default(type="submit") Submit
-#logo
-	.container-fluid
-		.row
-			h1 Veracity
-			//- img(src="images/logo.png" alt="veracity magazine")
-#mainNav
-	nav.navbar-default.navbar-static-top(role="navigation")
-		.container-fluid
-			.navbar-header
-				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
-					span.sr-only Toggle navigation
-					span.icon-bar
-					span.icon-bar
-					span.icon-bar
-			.collapse.navbar-collapse#bs-example-navbar-collapse-1
-				ul.nav.nav-justified
-					li.active
 						a(href="#") Journey
 					li
 						a(href="#") Life &amp; Culture
