fixed a few things, changed campus life is campus now

--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -11,11 +11,11 @@ header
 				.collapse.navbar-collapse#bs-example-navbar-collapse-1
 					ul.nav.navbar-nav
 						li 
-							a(href="#") About 
+							a(href="/about") About 
 						li 
-							a(href="#") Magazine
+							a(href="/") Magazine
 						li
-							a(href="#") Contact 
+							a(href="/contact") Contact 
 						li
 							a(href="#") 
 								img(src="/images/facebook.png", alt="facebook icon")
@@ -37,9 +37,9 @@ header
 			.collapse.navbar-collapse#bs-example-navbar-collapse-1
 				ul.nav.navbar-nav
 					li
-						a(href="#") Journey
+						a(href="/journey") Journey
 					li
-						a(href="#") Life &amp; Culture
+						a(href="lifeandculture") Life &amp; Culture
 					li
-						a(href="#") Campus Life
+						a(href="campus") Campus
 
