--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -1,18 +1,63 @@
 extends ../index.jade
 block content
-	h1 Journey
+	#journey
+		.section-header.title
+			h1 Journey
 	#stories
 		.row
 			.col-xs-12.col-md-8
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
+				.row
+					.col-md-12
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Journey
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more.row
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Journey
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Journey
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+				.row
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Journey
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Journey
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
 			.col-xs-12.col-md-4
 				h3 Bloom
 				.thumbnail
@@ -20,48 +65,6 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h4 Bloom
-						p blah blah blah 
-						p
-							a(href="#") read more
-		.row
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-		.row
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Journey
-						h4 story number 1 title goes here
 						p blah blah blah 
 						p
 							a(href="#") read more
