--- a/veracity/views/partials/about.jade
+++ b/veracity/views/partials/about.jade
@@ -1,3 +1,4 @@
 extends ../index.jade
 block content
 	h1 About Us
+	h4 Veracity Magazine strives to be a relevant publication that represents the college generation of Christian viewpoints, challenging them to rethink faith in life and culture, build campus-wide community, and serve as a resource for those seeking to learn more about the Christian faith. Above all, we recognize that a personal relationship with Jesus Christ is the foremost motivating foundation for all dialogue.
