--- a/veracity/views/partials/campus.jade
+++ b/veracity/views/partials/campus.jade
@@ -1,6 +1,6 @@
 extends ../index.jade
 block content
-	h1 Campus Life
+	h1 Campus 
 	#stories
 		.row
 			.col-xs-12.col-md-8
@@ -10,7 +10,7 @@ block content
 							a(href="#") 
 								img(src="/images/300x200.jpg", alt="...")
 							.caption
-								h6 Issue One / Campus Life
+								h6 Issue One / Campus 
 								h4 story number 1 title goes here
 								p blah blah blah 
 								p
@@ -20,7 +20,7 @@ block content
 							a(href="#") 
 								img(src="/images/300x200.jpg", alt="...")
 							.caption
-								h6 Issue One / Campus Life
+								h6 Issue One / Campus 
 								h4 story number 1 title goes here
 								p blah blah blah 
 								p
@@ -30,7 +30,7 @@ block content
 							a(href="#") 
 								img(src="/images/300x200.jpg", alt="...")
 							.caption
-								h6 Issue One / Campus Life
+								h6 Issue One / Campus 
 								h4 story number 1 title goes here
 								p blah blah blah 
 								p
@@ -41,7 +41,7 @@ block content
 							a(href="#") 
 								img(src="/images/300x200.jpg", alt="...")
 							.caption
-								h6 Issue One / Campus Life
+								h6 Issue One / Campus 
 								h4 story number 1 title goes here
 								p blah blah blah 
 								p
