--- a/veracity/views/partials/life_and_culture.jade
+++ b/veracity/views/partials/life_and_culture.jade
@@ -4,64 +4,65 @@ block content
 	#stories
 		.row
 			.col-xs-12.col-md-8
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Life &amp; Culture
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
+				.row
+					.col-md-12
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Life &amp; Culture
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more.row
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Life &amp; Culture
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Life &amp; Culture
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+				.row
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Life &amp; Culture
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
+					.col-md-6
+						.thumbnail
+							a(href="#") 
+								img(src="/images/300x200.jpg", alt="...")
+							.caption
+								h6 Issue One / Life &amp; Culture
+								h4 story number 1 title goes here
+								p blah blah blah 
+								p
+									a(href="#") read more
 			.col-xs-12.col-md-4
 				h3 Vera in the City
 				.thumbnail
 					a(href="#") 
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
-						h4 Vera in the City
-						p blah blah blah 
-						p
-							a(href="#") read more
-		.row
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Life &amp; Culture
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Life &amp; Culture
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-		.row
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Life &amp; Culture
-						h4 story number 1 title goes here
-						p blah blah blah 
-						p
-							a(href="#") read more
-			.col-md-6.col-md-4
-				.thumbnail
-					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
-					.caption
-						h6 Issue One / Life &amp; Culture
-						h4 story number 1 title goes here
+						h4 Vera in the City 
 						p blah blah blah 
 						p
 							a(href="#") read more
