--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -1,6 +1,6 @@
 header
 	#topNav
-		nav.navbar.navbar-inverse.navbar-static-top(role="navigation")
+		nav.navbar.navbar-static-top(role="navigation")
 			.container-fluid
 				.navbar-header
 					button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
@@ -16,15 +16,14 @@ header
 							a(href="/") Magazine
 						li
 							a(href="/contact") Contact 
-						li
-							a(href="#") 
-								img(src="/images/facebook.png", alt="facebook icon")
+						li.fa.fa-facebook
 					form.navbar-form.navbar-right(role="search")
 						.form-group
 							input.form-control(type="text", placeholder="Search")
 							button.btn.btn-default(type="submit") Submit
 #logo
-	img(src="images/logo.png" alt="veracity magazine")
+	a(href="/")
+		img.img-responsive.center-block(src="images/logo.png" alt="veracity magazine")
 #mainNav
 	nav.navbar-default(role="navigation")
 		.container-fluid
@@ -39,7 +38,7 @@ header
 					li
 						a(href="/journey") Journey
 					li
-						a(href="lifeandculture") Life &amp; Culture
+						a(href="/lifeandculture") Life &amp; Culture
 					li
-						a(href="campus") Campus
+						a(href="/campus") Campus
 
