--- a/veracity/views/partials/campus.jade
+++ b/veracity/views/partials/campus.jade
@@ -57,12 +57,11 @@ block content
 								p
 									a(href="#") read more
 			.col-xs-12.col-md-4
-				h3 Gray Area
 				.thumbnail
 					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
+						img.img-responsive(src="/images/grayareas.png", alt="...")
 					.caption
-						h4 Gray Area 
+						h4 Gray Areas
 						p blah blah blah 
 						p
 							a(href="#") read more
