--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -59,10 +59,9 @@ block content
 								p
 									a(href="#") read more
 			.col-xs-12.col-md-4
-				h3 Bloom
 				.thumbnail
 					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
+						img.img-responsive(src="/images/bloom.png", alt="...")
 					.caption
 						h4 Bloom
 						p blah blah blah 
