--- a/veracity/views/partials/life_and_culture.jade
+++ b/veracity/views/partials/life_and_culture.jade
@@ -57,10 +57,9 @@ block content
 								p
 									a(href="#") read more
 			.col-xs-12.col-md-4
-				h3 Vera in the City
 				.thumbnail
 					a(href="#") 
-						img(src="/images/300x200.jpg", alt="...")
+						img.img-responsive(src="/images/verainthecity.png", alt="...")
 					.caption
 						h4 Vera in the City 
 						p blah blah blah 
