--- a/veracity/views/partials/journey.jade
+++ b/veracity/views/partials/journey.jade
@@ -2,7 +2,8 @@ extends ../index.jade
 block content
 	#journey
 		.section-header.title
-			h1 Journey
+			h1
+				span Journey
 	#stories
 		.row
 			.col-xs-12.col-md-8
