--- a/veracity/views/index.jade
+++ b/veracity/views/index.jade
@@ -36,8 +36,9 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
@@ -46,8 +47,9 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
@@ -56,8 +58,9 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
@@ -66,8 +69,9 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
@@ -76,8 +80,9 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
 			.col-md-6.col-md-4
@@ -86,7 +91,8 @@ block content
 						img(src="/images/300x200.jpg", alt="...")
 					.caption
 						h6 Issue One / Journey
-						h4 story number 1 title goes here
-						p blah blah blah 
+						h4.storyTitle TITLE title
+						p.subhead SUBHEAD subhead subhead
+						p.byline BYLINE byline
 						p
 							a(href="#") read more
