--- a/veracity/views/partials/campus.jade
+++ b/veracity/views/partials/campus.jade
@@ -1,6 +1,9 @@
 extends ../index.jade
 block content
-	h1 Campus 
+	#campus
+		.section-header.title
+			h1
+				span Campus
 	#stories
 		.row
 			.col-xs-12.col-md-8
