--- a/veracity/views/partials/contact.jade
+++ b/veracity/views/partials/contact.jade
@@ -1,4 +1,4 @@
 extends ../index.jade
 block content
 	h1 Contact Us
-	h4 To get involved with Veracity, share your thoughts, or otherwise reach out to our staff, please email nuveracity@gmail.com
+	p To get involved with Veracity, share your thoughts, or otherwise reach out to our staff, please email nuveracity@gmail.com
