--- a/veracity/views/partials/life_and_culture.jade
+++ b/veracity/views/partials/life_and_culture.jade
@@ -1,6 +1,9 @@
 extends ../index.jade
 block content
-	h1 Life &amp; Culture
+	#lifeAndCulture
+		.section-header.title
+			h1
+				span Life &amp; Culture
 	#stories
 		.row
 			.col-xs-12.col-md-8
