--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -1,6 +1,6 @@
 header
 	#topNav
-		nav.navbar.navbar-static-top(role="navigation")
+		nav.navbar.navbar-default.navbar-static-top(role="navigation")
 			.container-fluid
 				.navbar-header
 					button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
@@ -17,23 +17,24 @@ header
 						li
 							a(href="/contact") Contact 
 						li.fa.fa-facebook
-					form.navbar-form.navbar-right(role="search")
+					//form.navbar-form.navbar-right(role="search")
 						.form-group
 							input.form-control(type="text", placeholder="Search")
 							button.btn.btn-default(type="submit") Submit
 #logo
 	a(href="/")
-		img.img-responsive.center-block(src="images/logo.png" alt="veracity magazine")
+		img.img-responsive.center-block.hidden-xs(src="/images/logo.png" alt="full logo")
+		img.img-responsive.center-block.visible-xs(src="/images/final-logo.png" alt="small logo")
 #mainNav
-	nav.navbar-default(role="navigation")
+	nav.navbar.navbar-default(role="navigation")
 		.container-fluid
 			.navbar-header
-				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+				button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-2")
 					span.sr-only Toggle navigation
 					span.icon-bar
 					span.icon-bar
 					span.icon-bar
-			.collapse.navbar-collapse#bs-example-navbar-collapse-1
+			.collapse.navbar-collapse#bs-example-navbar-collapse-2
 				ul.nav.navbar-nav
 					li
 						a(href="/journey") Journey
