--- a/veracity/views/partials/page/head.jade
+++ b/veracity/views/partials/page/head.jade
@@ -6,7 +6,7 @@ link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css
 link(rel='stylesheet', href='/stylesheets/main.css')
 link(rel='stylesheet', href='/stylesheets/page.css')
 link(rel='stylesheet', href='/stylesheets/carousel.css')
-//link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
+link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css', rel='stylesheet')
 // if lt IE 9
 	script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
 	script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
