--- a/veracity/views/partials/page/header.jade
+++ b/veracity/views/partials/page/header.jade
@@ -16,7 +16,8 @@ header
 							a(href="/") Magazine
 						li
 							a(href="/contact") Contact 
-						li.fa.fa-facebook
+						li
+							a.i.fa.fa-facebook(href='https://www.facebook.com/VeracityNU')
 					//form.navbar-form.navbar-right(role="search")
 						.form-group
 							input.form-control(type="text", placeholder="Search")
