--- a/veracity/views/admin/manage_users.jade
+++ b/veracity/views/admin/manage_users.jade
@@ -9,28 +9,31 @@ block content
 			table.table.table-hover
 				thead
 					tr
+						th
 						th Name
 						th Email
 						th Date Added
-						th(colspan=2) Administrator
-						th
-						th
-						th
+						th Admin
+						th(colspan=4)
 				tbody
 					each user, i in userlist
 						tr
+							td
+								img(src='/admin/userimage/#{user._id}')
 							td #{user.name.full}
 							td #{user.email}
 							td #{moment(user.create_time).format("MM/DD/YY")}
 							if user.admin
-								td Yes
-								td
-									button.btn.btn-info.btn-sm.demote(value='#{user._id}') Demote
+								td.text-center
+									span.glyphicon.glyphicon-ok
 							else
-								td No
 								td
-									button.btn.btn-success.btn-sm.promote(value='#{user._id}') Promote
 							td
-								button.btn.btn-warning.btn-sm.reset(value='#{user._id}') Reset Password
+								button.btn.btn-info.btn-sm(value='#{user._id}', title='Edit info')
+									span.glyphicon.glyphicon-pencil
 							td
-								button.btn.btn-danger.btn-sm.remove(value='#{user._id}') Remove
+								button.btn.btn-warning.btn-sm.reset(value='#{user._id}', title='Reset password')
+									span.glyphicon.glyphicon-lock
+							td
+								button.btn.btn-danger.btn-sm.remove(value='#{user._id}', title='Delete user')
+									span.glyphicon.glyphicon-trash
