--- a/views/public/page/footer.jade
+++ b/views/public/page/footer.jade
@@ -1,9 +1,3 @@
-footer
-	ul
-		li: a About Us
-		li: a Contact Us
-	#social
-		#facebook
-		#twitter
-		#instagram
-	p.text-muted: small Copyright &copy; 2014 Veracity Magazine. All rights reserved.
+#footer
+	#copyright
+		p.text-muted.text-center: small Copyright &copy; 2014 Veracity Magazine. All rights reserved.
