--- a/views/public/page/jsdefaults.jade
+++ b/views/public/page/jsdefaults.jade
@@ -2,3 +2,4 @@
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+link(href='/javascripts/carousel.js')
